Bug 496995 - NVIDIA poor performance warning
Summary: NVIDIA poor performance warning
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.2.4
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 494457 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-12-03 17:15 UTC by Alberto Salvia Novella
Modified: 2024-12-19 09:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot.png (88.87 KB, image/png)
2024-12-03 17:15 UTC, Alberto Salvia Novella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alberto Salvia Novella 2024-12-03 17:15:14 UTC
Created attachment 176327 [details]
screenshot.png

Why is this warning shown, if I have both settings turned off?
Comment 1 Bug Janitor Service 2024-12-09 22:33:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4991
Comment 2 Niccolò Venerandi 2024-12-12 10:50:41 UTC
Git commit 084ec9dad2d874869d7cfdc5d45d43222de97bb1 by Niccolò Venerandi.
Committed on 12/12/2024 at 10:50.
Pushed by niccolove into branch 'master'.

Only show unsupported configuration message for Adaptive mode

Previously this was shown for any non-default opacityMode, including "opaque",
even though that mode is not unsupported.

M  +1    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/084ec9dad2d874869d7cfdc5d45d43222de97bb1
Comment 3 Niccolò Venerandi 2024-12-19 09:49:39 UTC
*** Bug 494457 has been marked as a duplicate of this bug. ***