Only show unsupported configuration message for Adaptive mode

Previously this was shown for any non-default opacityMode, including "opaque",
even though that mode is not unsupported.

BUG:496995